--- a/Logical/Logical.csproj
+++ b/Logical/Logical.csproj
@@ -7,4 +7,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\LogicalParser\LogicalParser.csproj" />
+    </ItemGroup>
+
 </Project>
