--- a/LogicalParser/LogicalParser.csproj
+++ b/LogicalParser/LogicalParser.csproj
@@ -6,4 +6,17 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Pegasus" Version="4.2.0-alpha0003" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Remove="MathGrammar" />
+      <PegGrammar Include="Expression.peg.g" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Model" />
+    </ItemGroup>
+
 </Project>
