--- a/Logical/Logical.csproj
+++ b/Logical/Logical.csproj
@@ -8,7 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\LogicalParser\LogicalParser.csproj" />
+      <ProjectReference Include="..\Logical.Parser\Logical.Parser.csproj" />
     </ItemGroup>
 
 </Project>
