--- a/js/package.json
+++ b/js/package.json
@@ -1,7 +1,7 @@
 {
   "name": "logical",
   "version": "0.0.0",
-  "packageManager": "yarn@3.2.1",
+  "packageManager": "yarn@3.5.1",
   "scripts": {
     "start:dev": "nodemon",
     "test": "jest"
@@ -12,7 +12,7 @@
     "@babel/preset-typescript": "^7.17.12",
     "@types/jest": "^28.1.3",
     "@types/node": "^16.11.0",
-    "babel": "^6.23.0",
+    "babel-cli": "^6.23.0",
     "jest": "^28.1.1",
     "nodemon": "^2.0.20",
     "ts-node": "^10.8.1",
