--- a/Logical/Logical.csproj
+++ b/Logical/Logical.csproj
@@ -12,4 +12,8 @@
       <ProjectReference Include="..\Logical.Parser\Logical.Parser.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    </ItemGroup>
+
 </Project>
