--- a/Logical.Parser/Logical.Parser.csproj
+++ b/Logical.Parser/Logical.Parser.csproj
@@ -1,8 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
+        <TargetFramework>net9.0</TargetFramework>
         <Nullable>enable</Nullable>
         <LangVersion>12</LangVersion>
     </PropertyGroup>
@@ -10,6 +9,11 @@
     <ItemGroup>
       <PackageReference Include="Pegasus" Version="4.2.0-alpha0003" />
       <PackageReference Include="QuikGraph" Version="2.5.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Logical.Ast\Logical.Ast.csproj" />
+      <ProjectReference Include="..\Logical.Model\Logical.Model.csproj" />
     </ItemGroup>
 
     <ItemGroup>
