Refactor namespaces and update AST structure.
- Changed namespaces from Logical.Parser.Ast to Logical.Ast across multiple files.
- Simplified Compiler and FullAstVisitor constructors.
- Enhanced DecimalLiteral class with integer binary representation.
- Updated tests and snapshots to reflect changes.

--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -30,4 +30,8 @@
       <ProjectReference Include="..\Logical.Parser\Logical.Parser.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="__snapshots__\" />
+    </ItemGroup>
+
 </Project>
