Update solution structure to include Logical.Cli project and configure its properties.

--- a/Logical.Cli/Logical.Cli.csproj
+++ b/Logical.Cli/Logical.Cli.csproj
@@ -9,6 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Logical.Ast\Logical.Ast.csproj" />
       <ProjectReference Include="..\Logical.Parser\Logical.Parser.csproj" />
     </ItemGroup>
 
