Add visitor pattern implementation for Node trees
- Introduced INodeVisitor and INodeVisitor<T> interfaces for traversing Node trees.
- Implemented NodeVisitorBase and NodeVisitorBase<T> for default traversal behavior.
- Added NodeVisitorExtensions for accepting visitors on Node instances.
- Removed unused Class1.cs from Logical.Transform project.
- Updated Logical.Transform.csproj to reference Logical.Model project.
- Enhanced CompilerTests with new test cases for BoundAbstraction and UnboundAbstraction.
- Added new snapshot files for updated test cases.

--- a/Logical.Transform/Logical.Transform.csproj
+++ b/Logical.Transform/Logical.Transform.csproj
@@ -5,4 +5,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Logical.Model\Logical.Model.csproj" />
+  </ItemGroup>
+
 </Project>
