Clean up project configuration and ignore files
- Updated .gitignore to include workspace and solution settings files.
- Removed obsolete project files related to IDE settings and configurations.
- Deleted unnecessary .idea directory files to streamline project structure.

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,8 @@
 # IDE
 .idea
+*.code-workspace
+*.sln.DotSettings.user
 
-# yarn 2
-.yarn
-.pnp.*
-
-# generated
-js/src/generated
-
-# build
-/build
-
-# docs
-/doc/out
-
-# C#
-
+# Build
 /**/obj/
 /**/bin/
