Add PureTS projects and initial implementation
- Introduced PureTS.Ast, PureTS.IR, PureTS.Parser, PureTS.Cli, and PureTS.VM projects with foundational structures.
- Implemented core types and expressions in PureTS.Ast, including literals and expressions.
- Developed parsing capabilities in PureTS.Parser to handle various expressions and literals.
- Created an evaluation mechanism in PureTS.VM to execute parsed terms.
- Added command-line interface in PureTS.Cli for user interaction.
- Included comprehensive tests for parser and VM functionalities to ensure correctness.
- Updated solution file to include new PureTS projects and their configurations.

--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -28,6 +28,9 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Logical.Parser\Logical.Parser.csproj" />
+    <ProjectReference Include="..\PureTS.Parser\PureTS.Parser.fsproj" />
+    <ProjectReference Include="..\PureTS.IR\PureTS.IR.fsproj" />
+    <ProjectReference Include="..\PureTS.VM\PureTS.VM.fsproj" />
     </ItemGroup>
 
     <ItemGroup>
